Scroll Fix
Error fixed with horizontal scrolling and scaling issue.

--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
+html {
+    overflow-x: hidden;
+}
+
 body {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     background:#192B39;
     font-family: 'Rubik', sans-serif;
     color: #B2C0C7; 
-    width:1440px;
-    overflow-x: hidden; 
+    width:100%;
 }
 
 h1 {
@@ -14,6 +17,7 @@ h1 {
     font-size: 85px;
     margin-bottom:-10px;
     margin-top:80px;
+    font-weight: 700;
 }
 
 h2 {
